ISIS-1827 refactoring out some guava predicate usages yet without breaking API